# CarthEdge-v0.3

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: envelope.rs  error.rs  lib.rs  qkr_gate.rs  types.rs
core/src/channel/: header.rs  member.rs  mod.rs  recv.rs  state.rs
core/src/ratchet/: dh.rs  header.rs  kdf.rs  mod.rs  skipped.rs  state.rs  status.rs
core/tests/: test_channel_desync_forced_recovery.rs  test_channel_out_of_order.rs  test_channel_recv_normal.rs  test_channel_replay.rs  test_channel_state.rs  test_ratchet_state.rs
docs/: channel_spec.md  ratchet_spec.md  v0.3.5_checklist.md  v0.3_roadmap.md
pkg/ratchet/: kdf.go  kdf_test.go  qkr.go  qkr_mock_test.go  state.go  step_recv.go  step_send.go  step_test.go
