[package]
name = "carthedge_core"
version = "0.3.4"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "carthedge_core"
path = "src/lib.rs"

[dependencies]
rand_core = "0.6"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hex = "0.4"
